--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["inflection", "inflector", "string", "number", "date", "utility"],
     "authors": [
         {
-            "name": "Boris Guery",
+            "name": "Boris Guéry",
             "email": "guery.b@gmail.com"
         }
     ],
@@ -15,6 +15,9 @@
     "require": {
         "php": ">=5.3.2",
         "doctrine/inflector": "dev-master"
+    },
+    "require-dev": {
+      "phpunit/phpunit": "~3"
     },
     "autoload": {
         "psr-0": { "Inflexible": "src/" }
